[package]
name = "upcast-arithmetic"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Arithmetic that is upcasted on overflow"
repository = "https://github.com/umgefahren/upcast-arithmetic"
keywords = ["mathematics", "numerics", "no-std"]
categories = ["Algorithms", "Data structures", "Sience"]

[dependencies]
