[package]
name = "upcast-arithmetic"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Arithmetic that is upcasted on overflow"
repository = "https://github.com/umgefahren/upcast-arithmetic"
keywords = ["mathematics", "numerics", "no-std"]
categories = ["algorithms", "mathematics", "no-std"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8"

[profile.release]
lto = true

[[bench]]
name = "basic"
harness = false

[features]
default = ["const"]
const = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

